--- a/full-stack.html
+++ b/full-stack.html
@@ -38,6 +38,24 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://crateio.recruitee.com/o/fullstack-engineer'>
+      Fullstack Engineer - Crate.io Inc.
+    </a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://crateio.recruitee.com/o/fullstack-engineer-1'>
+      Fullstack Engineer - Crate.io Inc.
+    </a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://crateio.recruitee.com/o/fullstack-engineer-berlin'>
+      Fullstack Engineer - Crate.io Inc.
+    </a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
 <h5><a href='https://vkb.join.com/jobs/470765-full-stack-developer-m-w-d'>Job @ uptodate Ventures (Munich): Full Stack Devel... | JOIN</a></h5> 
 <p><span class="badge badge-light">Munich Munich M?nchen</span></p>
 <p>Posted on: 2019-10-30</p>
@@ -64,7 +82,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://login.hirelocker.com/hr-interventions-ltd/jobs/11424/full-stack-c-net-developer-lahinch?source=Twitter'>Full Stack C#.Net Developer - HRLocker - Lahinch | HireLocker.com</a></h5> 
+<h5><a href='https://login.hirelocker.com/hr-interventions-ltd/jobs/11424/full-stack-c-net-developer-lahinch?source=Twitter'>Full Stack C#.Net Developer - HRLocker - Lahinch | HireLocker.com</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -124,7 +142,7 @@
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://ateliware.recruitee.com/o/junior-full-stack-engineer'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ateliware.recruitee.com/o/junior-full-stack-engineer'>
       Junior Full Stack Engineer - ateliware software
     </a></h5> 
 <p><span class="badge badge-light">Curitiba Brazil</span></p>
@@ -158,7 +176,7 @@
 <p><span class="badge badge-light">Denver, CO</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Xref3/743999698432477-mid-level-full-stack-developer'>XREF Mid-Level | Full stack Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Xref3/743999698432477-mid-level-full-stack-developer'>XREF Mid-Level | Full stack Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Sydney Australia</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -182,7 +200,7 @@
 <p><span class="badge badge-light">San Mateo, California  Tempe, Arizona</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://idana.join.com/jobs/464256-fullstack-software-engineer-typescript-m-f-d'>Job @ Tomes (Remote): Fullstack Software Engineer ... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://idana.join.com/jobs/464256-fullstack-software-engineer-typescript-m-f-d'>Job @ Tomes (Remote): Fullstack Software Engineer ... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -198,7 +216,7 @@
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://www.fitzii.com/job/44483?s=ft'>Jr Full Stack Engineer | Walden Local Meat Co.</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.fitzii.com/job/44483?s=ft'>Jr Full Stack Engineer | Walden Local Meat Co.</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -214,11 +232,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://claritypartnersllc.applytojob.com/apply/RSwdZ1otBa/FullStack-Java-Developer'>Full-Stack Java Developer - Clarity Partners, LLC - Career Page</a></h5> 
+<h5><a href='https://claritypartnersllc.applytojob.com/apply/RSwdZ1otBa/FullStack-Java-Developer'>Full-Stack Java Developer - Clarity Partners, LLC - Career Page</a></h5> 
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.dice.com/jobs/detail/Full-Stack-Developer-TOP-Consulting-Columbus-Ohio-/10486611/6272533'>Full Stack Developer - TOP Consulting - Columbus, Ohio | Dice.com</a></h5> 
+<h5><a href='https://www.dice.com/jobs/detail/Full-Stack-Developer-TOP-Consulting-Columbus-Ohio-/10486611/6272533'>Full Stack Developer - TOP Consulting - Columbus, Ohio | Dice.com</a></h5> 
 <p><span class="badge badge-light">Columbus, Ohio</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -382,7 +400,7 @@ with experience using Python, Node js, Deep Learning, AWS, NoSQL, and SQL.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://greenjinn.com/careers/senior-full-stack-developer/'>Senior Full Stack Developer | GreenJinn</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://greenjinn.com/careers/senior-full-stack-developer/'>Senior Full Stack Developer | GreenJinn</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -402,7 +420,7 @@ with experience using Python, Node js, Deep Learning, AWS, NoSQL, and SQL.</p>
 <p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.prostaff.ch/de/jobs/19143'>JAVA Applikationsentwickler Fullstack (m/w) | PROSTAFF ? Swiss IT and Data Science Recruitment &amp; HR-Services</a></h5> 
+<h5><a href='https://www.prostaff.ch/de/jobs/19143'>JAVA Applikationsentwickler Fullstack (m/w) | PROSTAFF ? Swiss IT and Data Science Recruitment &amp; HR-Services</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -414,7 +432,7 @@ with experience using Python, Node js, Deep Learning, AWS, NoSQL, and SQL.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://www.42jobs.io/laravel/jobs/8423-stage-ou-cdi-developper-full-stack-laravel-react'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.42jobs.io/laravel/jobs/8423-stage-ou-cdi-developper-full-stack-laravel-react'>
 Stage ou CDI - D?velopper Full Stack Laravel / React at LEMON LEARNING in Paris | Laravel jobs | 42jobs.io
 
 </a></h5> 
@@ -451,18 +469,6 @@ Remote Senior Full Stack Developer at Ardian Group, Inc. | Rails jobs | 42jobs.i
 <hr/>
 <h5><a href='https://jobs.jobvite.com/inrix/job/o8epbfwG'>INRIX Careers - Full Stack Software Development Engineer</a></h5> 
 <p><span class="badge badge-light">Kirkland, Washington</span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Devoteam/743999698255176-es-full-stack-developer'>Devoteam ES - Full Stack Developer | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Madrid</span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='http://jrmconstructionmanagementllc.applytojob.com/apply/E03d0CaxBT/Full-Stack-Developer'>Full Stack Developer - JRM Construction Management, LLC - Career Page</a></h5> 
-<p><span class="badge badge-light">New York City</span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/LognLLC/743999698172791-sr-ruby-full-stack-developer'>Log(n) LLC Sr.Ruby Full Stack Developer | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
 
