--- a/web-developer.html
+++ b/web-developer.html
@@ -161,7 +161,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://www.pakngos.com.pk/job/trainer-web-designing-and-development'> Trainer-Web Designing and Development | PAK-NGOs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.pakngos.com.pk/job/trainer-web-designing-and-development'> Trainer-Web Designing and Development | PAK-NGOs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -173,7 +173,7 @@
 <p><span class="badge badge-light">Indianapolis, IN</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/SeekaTechnology/743999698349571-it-web-design-app-developer-internship'>Seeka Technology IT / Web Design / App Developer Internship | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SeekaTechnology/743999698349571-it-web-design-app-developer-internship'>Seeka Technology IT / Web Design / App Developer Internship | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Selangor, Malaysia</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -191,7 +191,7 @@
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/p3-americas/job/oukrbfwa'>umlaut North America Careers - Front-End Web Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/p3-americas/job/oukrbfwa'>umlaut North America Careers - Front-End Web Developer</a></h5> 
 <p><span class="badge badge-light">North America North America</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -199,11 +199,11 @@
 <p><span class="badge badge-light">Detroit</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Visa/743999698335805-software-engineer-web-applications-ref20023i-visa-digital-developer-platform-vddp-'>Visa Software Engineer, Web Applications (REF20023I) - Visa Digital Developer Platform (VDDP) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Visa/743999698335805-software-engineer-web-applications-ref20023i-visa-digital-developer-platform-vddp-'>Visa Software Engineer, Web Applications (REF20023I) - Visa Digital Developer Platform (VDDP) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/cmimedia/job/of5fbfwu'>CMI/Compas Careers - Senior Web Application Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/cmimedia/job/of5fbfwu'>CMI/Compas Careers - Senior Web Application Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 16, 2019 ... Identify, analyze and architect CMI/Compas strategic client deliverables ? 
 Develop process requirements and implement product development and release
@@ -217,7 +217,7 @@ Develop process requirements and implement product development and release
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://artisantalent.com/jobs/chicago/ux-architect/46134?utm_content=104251457&utm_medium=social&utm_source=twitter&hss_channel=tw-159227192'>Creative, Digital, Visual, and Marketing Jobs | Find Jobs Here | Web Developers, Programmers, Digital Account Executives</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://artisantalent.com/jobs/chicago/ux-architect/46134?utm_content=104251457&utm_medium=social&utm_source=twitter&hss_channel=tw-159227192'>Creative, Digital, Visual, and Marketing Jobs | Find Jobs Here | Web Developers, Programmers, Digital Account Executives</a></h5> 
 <p><span class="badge badge-light">Cincinnati, OH  Chicago, IL  Denver, CO  Indianapolis, IN  Los Angeles, CA  New York, NY  San Francisco, CA  Washington, DC</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -289,7 +289,7 @@ Develop process requirements and implement product development and release
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://apply.workable.com/pandell/j/D1A17EAA7C/'>Full Stack Web Developers - Pandell</a></h5> 
+<h5><a href='https://apply.workable.com/pandell/j/D1A17EAA7C/'>Full Stack Web Developers - Pandell</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
@@ -319,7 +319,7 @@ Develop process requirements and implement product development and release
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qneaVfwq&k=Job&j=olp7afwL&__jvst=Employee&__jvsd=slkU7hws&__jvsc=Twitter&bid=n2XolMwZ'>HelpSystems Careers - Web Development Intern</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qneaVfwq&k=Job&j=olp7afwL&__jvst=Employee&__jvsd=slkU7hws&__jvsc=Twitter&bid=n2XolMwZ'>HelpSystems Careers - Web Development Intern</a></h5> 
 <p><span class="badge badge-light">Eden Prairie, Minnesota</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
@@ -335,7 +335,7 @@ Develop process requirements and implement product development and release
 <p><span class="badge badge-light">Boulder, Colorado</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<h5><a href='https://applift.recruitee.com/l/en/o/php-web-developer-fmd-for-rechhero'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://applift.recruitee.com/l/en/o/php-web-developer-fmd-for-rechhero'>
       PHP Web Developer (f/m/d), for Rechhero - Applift
     </a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
@@ -426,7 +426,7 @@ finding and telling compelling stories about health, medicine, and scientific?..
 <p><span class="badge badge-light">Cincinnati, OH  Chicago, IL  Denver, CO  Indianapolis, IN  Los Angeles, CA  New York, NY  San Francisco, CA  Washington, DC</span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
-<h5><a href='https://artisantalent.com/jobs/chicago/product-architect/46186?utm_content=104050920&utm_medium=social&utm_source=twitter&hss_channel=tw-159227192'>Creative, Digital, Visual, and Marketing Jobs | Find Jobs Here | Web Developers, Programmers, Digital Account Executives</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://artisantalent.com/jobs/chicago/product-architect/46186?utm_content=104050920&utm_medium=social&utm_source=twitter&hss_channel=tw-159227192'>Creative, Digital, Visual, and Marketing Jobs | Find Jobs Here | Web Developers, Programmers, Digital Account Executives</a></h5> 
 <p><span class="badge badge-light">Cincinnati, OH  Chicago, IL  Denver, CO  Indianapolis, IN  Los Angeles, CA  New York, NY  San Francisco, CA  Washington, DC</span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
@@ -458,7 +458,7 @@ finding and telling compelling stories about health, medicine, and scientific?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://sportradar.join.com/jobs/451978-web-developer'>Job @ 1991 (Vienna): Web Developer | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://sportradar.join.com/jobs/451978-web-developer'>Job @ 1991 (Vienna): Web Developer | JOIN</a></h5> 
 <p><span class="badge badge-light">Vienna Vienna</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
